--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skill">Skill</a></li>
+                    <li><a href="#blog">Blog</a></li>
                     <li><a href="#services"> Services </a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -94,6 +95,74 @@
                     </div>
                 </div>                
                 </section>
+                <!-- Blog section -->
+                <section class="sec" id="blog">
+                    <h1>Blog</h1>
+                  <div class="blog">
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2015/06/01/09/04/blog-793047__340.jpg" alt="blog img">
+                        <h3 class="name">Blog-1</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2015/02/01/21/16/chalkboard-620316__340.jpg" alt="blog img">
+                        <h3 class="name">Blog-2</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2014/10/17/11/53/blog-492184__340.jpg" alt="blog img">
+                        <h3 class="name">Blog-3</h3>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="https://cdn.pixabay.com/photo/2018/04/13/16/49/laptop-3317007__340.jpg" alt="blog img">
+                            <h3 class="name">Blog-4</h3>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2017/05/30/03/58/blog-2355684__340.jpg" alt="blog img">
+                        <h3 class="name">Blog-5</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2014/12/15/14/38/coffee-569178__340.jpg" alt="blog img">
+                        <h3 class="name">Blog-6</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2015/01/04/17/30/wordpress-588495__340.jpg" alt="blog img">
+                        <h3 class="name"> Blog- 7</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2014/08/27/07/53/blog-428950__340.jpg" alt="blog img">
+                        <h3 class="name"> Blog-8</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2016/01/19/07/36/tree-1148032__340.jpg" alt="blog img">
+                        <h3 class="name"> Blog-9</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2019/09/09/08/23/internet-4463031__340.jpg" alt="blog img">
+                        <h3 class="name">Blog-10</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2014/09/27/20/00/social-media-464051__340.jpg" alt="blog img">
+                        <h3 class="name">Blog-11</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2018/05/08/15/28/blog-3383287__340.jpg" alt="blog img">
+                        <h3 class="name">Blog-12</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2017/03/17/11/38/blog-2151307__340.png" alt="blog img">
+                        <h3 class="name">Blog-13</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2015/10/04/08/06/blog-970722__340.jpg" alt="blog img">
+                        <h3 class="name">Blog-14</h3>
+                    </div>
+                    <div>
+                        <img src="https://cdn.pixabay.com/photo/2019/05/17/18/32/flower-4210320__340.jpg" alt="blog img">
+                        <h3 class="name">Blog-15</h3>
+                    </div>
+                  </div>
+                </section>
                 <!--    Services   -->
                 <section class="sec" id="services">
                     <h1>Services</h1>
@@ -128,5 +197,10 @@
                 </section>    
         </header>
     </main>
+    <footer>
+       <h3>My Facebook ID-<a target="_blank" href="https://www.facebook.com/sharot.dey.3"> Sharot Dey</a></h3> <br>
+       <h3 style="padding-left: 280px;">Our Community Group- <a target="_blank" href="https://www.facebook.com/groups/programmingavengerscommunity/"> Programming Avengers Community</a></h3> <br>
+       <h3 style="padding-right: 35px;">My Githut ID- <a target="_blank" href="https://github.com/sharot48">Sharot Dey</a></h3> <br>
+    </footer>
 </body>
 </html>
