this is portfolio

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 <section class="sec" id="skill">
                     <h1>Skill</h1>
                     <p class="skill" style="font-weight: 600;">I'm acquired some skills in web design sector. Which is shown below-</p>
-                <div style="display: flex; justify-content: space-between; padding: 50px;">
+                <div class="main-skill">
                     <div>
                         <div>
-                            <div style="display:flex; justify-content: space-between;">
+                            <div class="skills">
                                 <p class="skill">HTML</p>
                                 <p class="skill">98%</p>
                             </div>
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                         <div>
-                            <div style="display:flex; justify-content: space-between;">
+                            <div class="skills">
                             <p class="skill">CSS</p>
                             <p class="skill" >90%</p>
                             </div>
@@ -75,7 +75,7 @@
                     </div>
                     <div>
                         <div>
-                            <div style="display:flex; justify-content: space-between;">
+                            <div class="skills">
                             <p class="skill">Bootstarp</p>
                             <p class="skill">75%</p>
                             </div>
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                         <div>
-                            <div style="display:flex; justify-content: space-between;">
+                            <div class="skills">
                             <p class="skill">Java Script</p>
                             <p class="skill">50%</p>
                             </div>
@@ -190,8 +190,8 @@
                         <input type="text" ><br>
                         <label" for="email">Email:</label><br>
                         <input type="email"><br>
-                        <label for="">Massage:</label><br>
-                        <textarea name="comment" id="" cols="90" rows="10"></textarea><br>
+                        <label>Massage:</label><br>
+                        <textarea class="massage" name="comment" id="" cols="90" rows="10"></textarea><br>
                         <input class="button" type="submit">
                     </form>
                 </section>    
